--- a/src/app/album-list/album-list.component.html
+++ b/src/app/album-list/album-list.component.html
@@ -1,3 +1,3 @@
-<p>
-  album-list works!
-</p>
+<div *ngFor="let album of albums">
+  <crates-album-card [album]="album"></crates-album-card>
+</div>
