--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -1,8 +1,25 @@
-<mat-card>
-  <mat-card-title>
-    {{album.title}}
-  </mat-card-title>
-  <mat-card-subtitle>
-    {{album.artist}}
-  </mat-card-subtitle>
+<mat-card class="album-card">
+  <mat-card-header>
+    <img mat-card-avatar [src]="avatarImage" />
+    <mat-card-title>
+      {{album.title}}
+    </mat-card-title>
+    <mat-card-subtitle>
+      {{album.artist}}
+    </mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image [src]="album.coverImage" [alt]="album.title" [title]="album.title"/>
+  <mat-card-content>
+    <p>{{album.releaseYear}}</p>
+      <!-- <div *ngFor="let track of album.tracks">
+        <mat-card>
+          <mat-card-content>
+            {{track}}
+          </mat-card-content>
+        </mat-card>
+      </div> -->
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)="seeOnDiscogs()">SEE ON DISCOGS</button>
+  </mat-card-actions>
 </mat-card>
