--- a/src/app/album-list/album-list.component.html
+++ b/src/app/album-list/album-list.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let album of albums">
-  <crates-album-card [album]="album"></crates-album-card>
-</div>
+<mat-grid-list cols="4" rowHeight="1:1.5">
+  <mat-grid-tile *ngFor="let album of albums">
+    <crates-album-card [album]="album">
+    </crates-album-card>
+  </mat-grid-tile>
+</mat-grid-list>
