--- a/src/app/album-list/album-list.component.html
+++ b/src/app/album-list/album-list.component.html
@@ -1,6 +1,11 @@
-<mat-grid-list cols="4" rowHeight="1:1.5">
-  <mat-grid-tile *ngFor="let album of albums">
-    <crates-album-card [album]="album">
-    </crates-album-card>
-  </mat-grid-tile>
-</mat-grid-list>
+<h1>
+    Albums
+</h1>
+
+<div class="container-fluid">
+    <div class="row flex-row flex-wrap">
+        <div class="col-xs-4" *ngFor="let album of albums">
+            <crates-album-card [album]="album"></crates-album-card>
+        </div>
+    </div>
+</div>
