--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<router-outlet></router-outlet>
-
-<crates-album-list></crates-album-list>
+<crates-navbar [title]="title"></crates-navbar>
+<main class="container">
+    <router-outlet></router-outlet>
+</main>
