--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -1,8 +1,10 @@
 <div class="card" style="width: 22rem;">
-    <img class="card-img-top" [src]="album.coverImage" alt="album.title">
+    <a routerLink="/detail/{{album.id}}">
+        <img class="card-img-top" [src]="album.coverImage" alt="album.title">
+    </a>
     <div class="card-body">
-      <h5 class="card-title">{{album.title}}</h5>
-      <p class="card-text">{{album.artist}}</p>
-      <a [href]="album.discogsMasterReleaseUrl" class="btn btn-primary">View on Discogs</a>
+        <h5 class="card-title">{{album.title}}</h5>
+        <p class="card-text">{{album.artist}}</p>
+        <a [href]="album.discogsMasterReleaseUrl" class="btn btn-primary">View on Discogs</a>
     </div>
-  </div>
+</div>
